--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@
   text-align: center;
 }
 
+/************** RESET CSS ************/
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 /* RESET UL STYLE */
 .App ul {
   list-style-type: none;
