--- a/src/components/TouristicItem/CommentsList/CommentsList.css
+++ b/src/components/TouristicItem/CommentsList/CommentsList.css
@@ -2,7 +2,13 @@
     padding: 1rem 0 1rem 1.5rem;
 }
 
+.displayCommentsExpander {
+    display: flex;
+    
+}
+
 .commentTitle {
     font-size: 1.20rem;
-    padding: 0 0 1rem 0;
+    padding: 0 3rem 1rem 0;
+    cursor: pointer;
 }
