--- a/src/components/TouristicItem/TouristicItem.css
+++ b/src/components/TouristicItem/TouristicItem.css
@@ -3,6 +3,10 @@
     align-items: center;
 }
 
+.touristicItem {
+    cursor: pointer;
+}
+
 .touristicItem img {
     width: 500px;
     padding-left: 1.5rem;
