--- a/src/components/TouristicItem/CommentsList/CommentsList.css
+++ b/src/components/TouristicItem/CommentsList/CommentsList.css
@@ -1,5 +1,5 @@
 .commentWrapper {
-    padding: 1rem 0 1rem 1.5rem;
+    margin: 1rem 0 1rem 0;
 }
 
 .displayCommentsExpander {
@@ -9,6 +9,6 @@
 
 .commentTitle {
     font-size: 1.20rem;
-    padding: 0 3rem 1rem 0;
+    margin: 0 3rem 1rem 0;
     cursor: pointer;
 }
