--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,7 @@
 /* CSS RESET (Pending)*/
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .homeMain {
@@ -9,14 +9,22 @@ body {
  flex-direction: column;
 }
 
-.homeTitle {
-    padding: 2rem 0;
+.homeText {
+    height: 75vh;
+    margin-top: 1rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center
 }
 
 .homeTitleH1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    max-width: 50%;
     font-size: 2.5rem;
     color: #ff143d
 }
