--- a/src/components/TouristicItem/CommentsList/CommentsList.css
+++ b/src/components/TouristicItem/CommentsList/CommentsList.css
@@ -4,7 +4,10 @@
 
 .displayCommentsExpander {
     display: flex;
-    
+}
+
+.displayCommentsExpander:hover {
+    color: #ff143d
 }
 
 .commentTitle {
