--- a/src/components/TouristicItem/TouristicItem.css
+++ b/src/components/TouristicItem/TouristicItem.css
@@ -37,6 +37,10 @@
     font-size: 1.30rem;
 }
 
+.touristicItemName:hover {
+    color: #ff143d;
+}
+
 .touristicItemDescription {
     padding: 1rem;
 }
