first response to complaints about responsiveness, tbc...

--- a/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
+++ b/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
@@ -1,3 +1,6 @@
+/* For Desktop View */
+@media screen and (min-width: 1024px) {
+    
 .provinceDetailsMain {
     display: flex;
 }
@@ -22,7 +25,7 @@
 }
 
 .provinceMap {
-    min-width: 800px;
+    min-width: 45%;
     /* min-width must be same as ReactMapGL inline style width */
     padding-top: 2rem;
 }
@@ -43,19 +46,55 @@
     border-radius: 20px;
   }
 
-/* ::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(61, 52, 52, 0.3);
-	background-color: #F5F5F5;
+  }
+
+  @media screen and (min-width: 731px) {
+
+  }
+
+/* 
+.provinceDetailsMain {
+    display: flex;
 }
 
-::-webkit-scrollbar
-{
-	width: 6px;
-	background-color: #F5F5F5;
+.provinceInfo {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: scroll;
+    max-height: 87vh;
+    padding: 1.5rem
 }
 
-::-webkit-scrollbar-thumb
-{
-	background-color: #000000;
-} */
+.mainTitle {
+    font-size: 2rem;
+    margin: 2rem 0 0 0;
+}
+
+.secondaryTitle {
+    margin: 1.5rem 0;
+    font-weight: 300;
+}
+
+.provinceMap {
+    min-width: 45%;
+    padding-top: 2rem;
+}
+
+::-webkit-scrollbar-button {
+    height: 12px;
+    }
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 30px;
+    overflow: scroll;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(90, 90, 90);
+    height: 10px;
+    border-radius: 20px;
+  } */
+
+
