--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,3 +23,14 @@ a:hover {
     display: flex;
     justify-content: center;
 }
+
+@media screen and (min-width: 375px) {
+    a {
+        font-size: 0.75rem;
+        text-decoration: none;
+        padding: 0.3rem;
+        cursor: pointer;
+        color: #000;
+        font-weight: 600;
+    }
+}
