--- a/src/components/TouristicItem/TouristicItem.css
+++ b/src/components/TouristicItem/TouristicItem.css
@@ -9,13 +9,7 @@
 
 .touristicItem img {
     width: 500px;
-    /* padding-left: 1.5rem; */
-    /* border-radius: 30px; */
 }
-
-/* .touristicItemImg{
-    border-radius: 30px;
-} */
 
 .touristicItemImg{
     overflow: hidden;
@@ -43,4 +37,16 @@
 
 .touristicItemDescription {
     padding: 1rem;
+}
+
+@media screen and (min-width: 375px) {
+    .touristicItemWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .touristicItem img {
+        max-width: 80vw;
+    }
 }
