minmaxing can be baaad mkay?

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -24,7 +24,7 @@ a:hover {
     justify-content: center;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
     a {
         font-size: 0.75rem;
         text-decoration: none;
