--- a/src/components/TouristicItem/TouristicItem.css
+++ b/src/components/TouristicItem/TouristicItem.css
@@ -39,7 +39,7 @@
     padding: 1rem;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
     .touristicItemWrapper {
         display: flex;
         flex-direction: column;
