--- a/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
+++ b/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
@@ -79,7 +79,7 @@
 }
 
   /* For tablet and landscape */
-  @media screen and (min-width: 375px) {
+  @media screen and (max-width: 375px) {
 
 .provinceDetailsMain {
     display: flex;
