--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -39,7 +39,7 @@
     color: #ff143d;
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
     .nav_bar {
         display: flex;
         justify-content: space-evenly;
