--- a/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
+++ b/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
@@ -12,3 +12,16 @@
 .provinceName:hover {
     color: #ff143d;
 }
+
+@media screen and (max-width: 375px) {
+    .provinceName {
+        font-size: 1rem;
+        font-weight: 600;
+        padding-bottom: 1rem;
+        padding-left: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        cursor: pointer;
+    }
+}
