--- a/src/components/ProvinceList/ProvinceList.css
+++ b/src/components/ProvinceList/ProvinceList.css
@@ -12,4 +12,20 @@
 }
 
 
+@media screen and (max-width: 375px) {
+
+    .provinceListWrapper {
+        width: 50vw;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .provinceTitle {
+        font-size: 1rem;
+        /* padding-bottom: 1rem; */
+        /* padding-left: 1rem; */
+    }
+}
+
 
