--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -27,13 +27,13 @@ body {
     max-width: 50%;
     font-size: 2.5rem;
     color: #ff143d
+
 }
 
 .provinceList {
     display: flex;
     justify-content: center;
     align-items: center;
-
     color: var(--clr-primary);
 }
 
@@ -44,27 +44,43 @@ body {
 }
 
 @media screen and (max-width: 375px) {
-    .provinceList {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap-reverse;
-        color: var(--clr-primary);
-    }
+
+.homeMain {
+    display: flex;
+    flex-direction: column;
+   }
+
+.provinceList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap-reverse;
+    color: var(--clr-primary);
+    
 }
 
 
-/* .provinceList {
-display: flex;
-flex-direction: column;
-align-self: flex-start;
-justify-content: flex-start;
-align-items: center;
+.homeText {
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start
 }
 
-.provinceList ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-} */
+.homeTitleH1 {
+    max-width: 80%;
+    font-size: 1.3rem;
+    color: #ff143d;
+    padding: 2rem 0 1rem 1rem
+}
+
+
+
+.actualProvinceList{
+    margin-top: 1.5rem;
+}
+
+
+}
