--- a/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
+++ b/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     flex-grow: 1;
     overflow-y: scroll;
-    /* max-height: 87vh; */
+    max-height: 84vh;
     padding: 1.5rem
 }
 
@@ -25,7 +25,7 @@
 .provinceMap {
     min-width: 45%;
     /* min-width must be same as ReactMapGL inline style width */
-    padding-top: 2rem;
+    padding: 1rem 0;
 }
 
 ::-webkit-scrollbar-button {
@@ -75,6 +75,24 @@
     /* min-width must be same as ReactMapGL inline style width */
     padding-top: 2rem;
 }
+
+
+::-webkit-scrollbar-button {
+    height: 12px;
+    }
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 30px;
+    overflow: scroll;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(90, 90, 90);
+    height: 10px;
+    border-radius: 20px;
+  }
+
 
 }
 
