--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -43,7 +43,7 @@ body {
     margin: 0;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
 
 .homeMain {
     display: flex;
@@ -82,5 +82,39 @@ body {
     margin-top: 1.5rem;
 }
 
+
+}
+
+@media screen and (min-width:481px) and (max-width: 768px) {
+    .provinceList {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap-reverse;
+        color: var(--clr-primary);   
+    }
+
+
+.homeText {
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start
+}
+
+.homeTitleH1 {
+    max-width: 80%;
+    font-size: 2rem;
+    color: #ff143d;
+    padding: 1rem 0 0 1rem
+}
+
+
+
+.actualProvinceList{
+    margin-top: 1.5rem;
+}
 
 }
