--- a/src/components/ProvinceList/ProvinceList.css
+++ b/src/components/ProvinceList/ProvinceList.css
@@ -12,7 +12,7 @@
 }
 
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
 
     .provinceListWrapper {
         width: 50vw;
@@ -28,4 +28,17 @@
     }
 }
 
+@media screen and (min-width:481px) and (max-width: 768px) {
+    .provinceListWrapper {
+        width: 50vw;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .provinceTitle {
+        font-size: 2rem;
+        /* padding-bottom: 1rem; */
+        /* padding-left: 1rem; */
+    }
+}
