--- a/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
+++ b/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
@@ -76,7 +76,6 @@
     padding-top: 2rem;
 }
 
-
 ::-webkit-scrollbar-button {
     height: 12px;
     }
@@ -93,11 +92,10 @@
     border-radius: 20px;
   }
 
-
 }
 
-  /* For tablet and landscape */
-  @media screen and (max-width: 375px) {
+  /* For mobile */
+  @media screen and (max-width: 480px) {
 
 .provinceDetailsMain {
     display: flex;
@@ -110,7 +108,6 @@
     flex-direction: column;
     flex-grow: 1;
     overflow-y: scroll;
-    
     padding: 1.5rem
 }
 
@@ -132,49 +129,23 @@
 }
   }
 
-/* 
-.provinceDetailsMain {
-    display: flex;
-}
+  /*for tablets and landscape*/
+  @media screen and (min-width:481px) and (max-width: 768px) {
 
-.provinceInfo {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    overflow-y: scroll;
-    max-height: 87vh;
-    padding: 1.5rem
-}
-
-.mainTitle {
-    font-size: 2rem;
-    margin: 2rem 0 0 0;
-}
-
-.secondaryTitle {
-    margin: 1.5rem 0;
-    font-weight: 300;
-}
-
-.provinceMap {
-    min-width: 45%;
-    padding-top: 2rem;
-}
-
-::-webkit-scrollbar-button {
-    height: 12px;
+    .provinceDetailsMain {
+        display: flex;
+        flex-wrap: wrap-reverse;
+        justify-content: center;
     }
-
-::-webkit-scrollbar {
-    width: 12px;
-    height: 30px;
-    overflow: scroll;
+    
+    .provinceMap {
+        min-width: 80%;
+        min-height: 30vh;
+        /* min-width must be same as ReactMapGL inline style width */
+        padding-top: 1rem;
+        padding-bottom: 0.5rem
+    }
+    
   }
-  
-  ::-webkit-scrollbar-thumb {
-    background: rgb(90, 90, 90);
-    height: 10px;
-    border-radius: 20px;
-  } */
 
 
