--- a/src/components/HomeMap/HomeMap.css
+++ b/src/components/HomeMap/HomeMap.css
@@ -19,3 +19,9 @@
     height: 55vh
   }
 }
+
+@media screen and (min-width:769px) and (max-width: 1023px) {
+  .mapWrapper {
+    height: 50vh
+  }
+}
