--- a/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
+++ b/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
@@ -38,3 +38,16 @@
         cursor: pointer;
     }
 }
+
+@media screen and (min-width:769px) and (max-width: 1023px) {
+    .provinceName {
+        font-size: 2rem;
+        font-weight: 600;
+        padding-bottom: 1rem;
+        padding-left: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        cursor: pointer;
+    }
+}
