--- a/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
+++ b/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
@@ -51,3 +51,9 @@
         cursor: pointer;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .provinceName{
+        padding-left: 0;
+    }
+}
