responding to the last responders

--- a/src/components/HomeMap/HomeMap.css
+++ b/src/components/HomeMap/HomeMap.css
@@ -26,7 +26,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px) {
   .mapWrapper {
     width: 50vw;
     /* max-height: 60vh; */
