--- a/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
+++ b/src/pages/ProvinceDetailsPage/ProvinceDetailsPage.css
@@ -45,7 +45,7 @@
   }
 
 /* For small laptop */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1200px)  {
     
 .provinceDetailsMain {
     display: flex;
@@ -73,7 +73,7 @@
 .provinceMap {
     min-width: 45%;
     /* min-width must be same as ReactMapGL inline style width */
-    padding-top: 2rem;
+    padding: 0.5rem 1.7rem 3rem 0
 }
 
 ::-webkit-scrollbar-button {
@@ -163,9 +163,9 @@
     }
   }
 
-  @media screen and (min-width: 1024px) {
+  /* @media screen and (min-width: 1024px) and (max-width: 1200px) {
     .provinceMap {
-        /* min-width must be same as ReactMapGL inline style width */
+        
         padding: 0.5rem 1.7rem 3rem 0
     }
-  }
+  } */
