--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,3 +34,11 @@ a:hover {
         font-weight: 600;
     }
 }
+
+
+@media screen and (min-width:481px) and (max-width: 1023px) {
+    .footerMain {
+    position:relative;
+    }
+}
+
