--- a/src/components/ProvinceList/ProvinceList.css
+++ b/src/components/ProvinceList/ProvinceList.css
@@ -59,7 +59,7 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
     .provinceListWrapper {
-        width: 50vw;
+        /* width: 50vw; */
         display: flex;
         flex-direction: column;
         /* align-items: flex-start; */
