--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,3 @@
-/* CSS RESET (Pending)*/
-
 body {
     overflow-x: hidden;
 }
@@ -41,6 +39,10 @@ body {
     list-style-type: none;
     padding: 0;
     margin: 0;
+}
+
+.homeMapDiv {
+    overflow: hidden;
 }
 
 @media screen and (max-width: 480px) {
