responsive it is... or is it?

--- a/src/components/HomeMap/HomeMap.css
+++ b/src/components/HomeMap/HomeMap.css
@@ -4,7 +4,8 @@
   align-items: center;
   flex-grow: 2;
   height: 80vh;
-  min-width: 60vw;
+  /* min-width: 60vw; */
+  max-width: 60vw;
 }
 
 .mapCanvas {
@@ -14,25 +15,37 @@
 
 @media screen and (max-width: 480px) {
   .mapWrapper {
-    height: 40vh;
+    height: 45vh;
+    width: 90vw;
+    /* max-height: 45vh; */
     /* meter width y height fijas a cada mediaquery */
   }
 }
 
 @media screen and (min-width:481px) and (max-width: 768px) {
   .mapWrapper {
-    height: 55vh
+    height: 40vh;
+    width: 70vw;
   }
 }
 
 @media screen and (min-width:769px) and (max-width: 1023px) {
   .mapWrapper {
-    height: 50vh
+    height: 50vh;
+    width: 55vw
   }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1200px) {
   .mapWrapper {
-  
+  height: 70vh;
+  padding-right: 1rem;
   }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1340px) {
+  .mapWrapper {
+  
+    padding-right: 1rem;
+    }
 }
