--- a/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
+++ b/src/components/ProvinceList/ProvinceItem/ProvinceItem.css
@@ -2,7 +2,7 @@
     font-size: 1.5rem;
     font-weight: 600;
     padding-bottom: 1rem;
-    padding-left: 1rem;
+    /* padding-left: 1rem; */
     display: flex;
     flex-direction: column;
     align-items: center;
